# eos-midi-bridge

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs  midi_osc_logic.rs
