[package]
name = "eos-midi-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["canvas", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
midir = "0.9"
rosc = "0.10"
async-recursion = "1.0"
serde = { version = "1.0", features = ["derive"] }
confy = "0.6"
anyhow = "1.0"

